--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 image = "0.25.8"
-indicatif = "0.18.0"
+indicatif = { version = "0.18.0", features = ["rayon"] }
 rand = "0.9.2"
+rayon = "1.11.0"
