--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.48", features = ["derive"] }
 image = "0.25.8"
 indicatif = { version = "0.18.0", features = ["rayon"] }
 rand = "0.9.2"
