--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2024"
 clap = { version = "4.5.48", features = ["derive"] }
 image = "0.25.8"
 indicatif = { version = "0.18.0", features = ["rayon"] }
-rand = "0.9.2"
 rayon = "1.11.0"
+sobol = "1.0.2"
 tobj = "4.0.3"
+
+[profile.release]
+lto = "thin"
